--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -167,7 +167,7 @@
             class="as__nav_links_ppal_link"
             aria-current="page"
             title="Preguntas frecuentes"
-            href="/PORTAL/faq.html"
+            href="/PORTAL/faq_1.html"
             >Preguntas frecuentes</a
           >
         </li>
