--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -179,7 +179,7 @@ body {
         .as__nav_links {
           @apply h-[100%] my-0 py-0;
           .as__nav_links_ppal_li {
-            @apply my-0;
+            @apply my-0 relative;
             a {
               @apply text-xl;
             }
@@ -231,7 +231,7 @@ body {
         @apply flex duration-700 animate-in fade-in;
       }
       li.as__nav_links_ppal_li {
-        @apply my-auto w-full lg:px-0 2xl:px-4 text-center md:w-auto md:px-0 lg:rounded-none rounded-lg bg-white bg-opacity-20 lg:bg-transparent;
+        @apply my-auto w-full lg:px-0 2xl:px-4 text-center lg:w-auto md:px-0 lg:rounded-none rounded-lg bg-white bg-opacity-20 lg:bg-transparent;
         &.usability {
           @apply mr-4;
         }
@@ -336,11 +336,23 @@ body {
         }
         &.dropdown {
           @apply z-20;
+          .help {
+            @apply absolute top-0 right-0 h-0 w-0;
+          }
           .avat {
             @apply w-8 h-8 block rounded-full;
           }
+          &.dest {
+            .avat {
+              @apply border-2 border-azul-80;
+            }
+          }
           ul {
             @apply z-[1] menu p-2 shadow bg-base-100 rounded-box lg:w-80 w-80;
+            &.openp {
+              @apply visible opacity-100;
+            }
+
             li {
               a {
                 @apply flex justify-between items-center;
@@ -356,8 +368,19 @@ body {
         }
       }
     }
+    .dest {
+      .as__nav_links_ppal_link {
+        @apply border border-white;
+      }
+    }
+    .help_int {
+      @apply absolute top-0 left-5 h-0 w-0;
+    }
     .dropdown-content {
       @apply z-[1] menu p-2 lg:shadow lg:bg-base-100 lg:rounded-box lg:w-80 w-full;
+      &.openp {
+        @apply visible opacity-100;
+      }
 
       li {
         a {
@@ -1847,8 +1870,9 @@ body {
 }
 
 .modal_ss,
-.modal_sesion {
-  @apply !bg-alpha-18 bg-opacity-25;
+.modal_sesion,
+.modal_intro {
+  background-color: rgba(69, 125, 149, 0.5);
   .modal-box {
     @apply bg-BG-8 border border-azul-bright2 max-w-sm p-4 !overflow-visible;
     .close_small {
@@ -1899,6 +1923,18 @@ body {
       form {
         @apply w-full;
       }
+      .form-bots {
+        @apply flex justify-between gap-2 w-full;
+        button {
+          @apply btn btn-sm py-2 h-auto;
+          &.btn_ok {
+            @apply flex-auto bg-green-100 border-green-600 text-green-900 hover:bg-green-300;
+          }
+          &.btn_x {
+            @apply flex-auto bg-red-100 text-red-900 border-red-600 hover:bg-red-300 w-1/3;
+          }
+        }
+      }
       p {
         @apply text-sm mb-2;
       }
@@ -1938,484 +1974,6 @@ body {
     }
   }
 }
-
-.introjs-overlay {
-  position: absolute;
-  box-sizing: content-box;
-  z-index: 999999;
-  opacity: 0;
-  transition: all 0.3s ease-out;
-}
-.introjs-showElement {
-  z-index: 9999999 !important;
-}
-tr.introjs-showElement > td {
-  z-index: 9999999 !important;
-  position: relative;
-}
-tr.introjs-showElement > th {
-  z-index: 9999999 !important;
-  position: relative;
-}
-.introjs-disableInteraction {
-  z-index: 99999999 !important;
-  position: absolute;
-  opacity: 0;
-  @apply bg-alpha-30;
-}
-.introjs-relativePosition {
-  position: relative;
-}
-.introjs-helperLayer {
-  box-sizing: content-box;
-  position: absolute;
-  z-index: 9999998;
-  border-radius: 4px;
-  transition: all 0.3s ease-out;
-}
-.introjs-helperLayer * {
-  box-sizing: content-box;
-}
-.introjs-helperLayer :before {
-  box-sizing: content-box;
-}
-.introjs-helperLayer :after {
-  box-sizing: content-box;
-}
-.introjs-tooltipReferenceLayer {
-  box-sizing: content-box;
-  position: absolute;
-  visibility: hidden;
-  z-index: 100000000;
-  background-color: transparent;
-  transition: all 0.3s ease-out;
-}
-.introjs-tooltipReferenceLayer * {
-}
-.introjs-helperNumberLayer {
-  color: #9e9e9e;
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.introjs-arrow {
-  border: 5px solid transparent;
-  content: "";
-  position: absolute;
-}
-.introjs-arrow.top {
-  top: -10px;
-  left: 10px;
-  border-bottom-color: #fff;
-}
-.introjs-arrow.top-right {
-  top: -10px;
-  right: 10px;
-  border-bottom-color: #fff;
-}
-.introjs-arrow.top-middle {
-  top: -10px;
-  left: 50%;
-  margin-left: -5px;
-  border-bottom-color: #fff;
-}
-.introjs-arrow.right {
-  right: -10px;
-  top: 10px;
-  border-left-color: #fff;
-}
-.introjs-arrow.right-bottom {
-  bottom: 10px;
-  right: -10px;
-  border-left-color: #fff;
-}
-.introjs-arrow.bottom {
-  bottom: -10px;
-  left: 10px;
-  border-top-color: #fff;
-}
-.introjs-arrow.bottom-right {
-  bottom: -10px;
-  right: 10px;
-  border-top-color: #fff;
-}
-.introjs-arrow.bottom-middle {
-  bottom: -10px;
-  left: 50%;
-  margin-left: -5px;
-  border-top-color: #fff;
-}
-.introjs-arrow.left {
-  left: -10px;
-  top: 10px;
-  border-right-color: #fff;
-}
-.introjs-arrow.left-bottom {
-  left: -10px;
-  bottom: 10px;
-  border-right-color: #fff;
-}
-.introjs-tooltip {
-  box-sizing: content-box;
-  position: absolute;
-  visibility: visible;
-  background-color: #fff;
-  min-width: 250px;
-  max-width: 300px;
-  border-radius: 5px;
-  box-shadow: 0 3px 30px rgba(33, 33, 33, 0.3);
-  transition: opacity 0.1s ease-out;
-}
-.introjs-tooltiptext {
-  padding: 20px;
-}
-.introjs-dontShowAgain {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.introjs-dontShowAgain input {
-  padding: 0;
-  margin: 0;
-  margin-bottom: 2px;
-  display: inline;
-  width: 10px;
-  height: 10px;
-}
-.introjs-dontShowAgain label {
-  font-size: 14px;
-  display: inline-block;
-  font-weight: 400;
-  margin: 0 0 0 5px;
-  padding: 0;
-  background-color: #fff;
-  color: #616161;
-  -webkit-user-select: none;
-  user-select: none;
-}
-.introjs-tooltip-title {
-  font-size: 18px;
-  width: 90%;
-  min-height: 1.5em;
-  margin: 0;
-  padding: 0;
-  font-weight: 700;
-  line-height: 1.5;
-}
-.introjs-tooltip-header {
-  position: relative;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10px;
-  min-height: 1.5em;
-}
-.introjs-tooltipbuttons {
-  border-top: 1px solid #e0e0e0;
-  padding: 10px;
-  text-align: right;
-  white-space: nowrap;
-}
-.introjs-tooltipbuttons:after {
-  content: "";
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both;
-}
-.introjs-button {
-  box-sizing: content-box;
-  position: relative;
-  overflow: visible;
-  padding: 0.5rem 1rem;
-  border: 1px solid #bdbdbd;
-  text-decoration: none;
-  text-shadow: 1px 1px 0 #fff;
-  font-size: 14px;
-  color: #424242;
-  white-space: nowrap;
-  cursor: pointer;
-  outline: 0;
-  background-color: #f4f4f4;
-  border-radius: 0.2em;
-  zoom: 1;
-  display: inline;
-}
-.introjs-button:hover {
-  outline: 0;
-  text-decoration: none;
-  border-color: #9e9e9e;
-  background-color: #e0e0e0;
-  color: #212121;
-}
-.introjs-button:focus {
-  outline: 0;
-  text-decoration: none;
-  background-color: #eee;
-  box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.5);
-  border: 1px solid #616161;
-  color: #212121;
-}
-.introjs-button:active {
-  outline: 0;
-  text-decoration: none;
-  background-color: #e0e0e0;
-  border-color: #9e9e9e;
-  color: #212121;
-}
-.introjs-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-.introjs-skipbutton {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: inline-block;
-  width: 45px;
-  height: 45px;
-  line-height: 45px;
-  color: #616161;
-  font-size: 22px;
-  cursor: pointer;
-  font-weight: 700;
-  text-align: center;
-  text-decoration: none;
-}
-.introjs-skipbutton:focus,
-.introjs-skipbutton:hover {
-  color: #212121;
-  outline: 0;
-  text-decoration: none;
-}
-.introjs-prevbutton {
-  float: left;
-}
-.introjs-nextbutton {
-  float: right;
-}
-.introjs-disabled {
-  color: #9e9e9e;
-  border-color: #bdbdbd;
-  box-shadow: none;
-  cursor: default;
-  background-color: #f4f4f4;
-  background-image: none;
-  text-decoration: none;
-}
-.introjs-disabled:focus,
-.introjs-disabled:hover {
-  color: #9e9e9e;
-  border-color: #bdbdbd;
-  box-shadow: none;
-  cursor: default;
-  background-color: #f4f4f4;
-  background-image: none;
-  text-decoration: none;
-}
-.introjs-hidden {
-  display: none;
-}
-.introjs-bullets {
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.introjs-bullets ul {
-  box-sizing: content-box;
-  clear: both;
-  margin: 0 auto 0;
-  padding: 0;
-  display: inline-block;
-}
-.introjs-bullets ul li {
-  box-sizing: content-box;
-  list-style: none;
-  float: left;
-  margin: 0 2px;
-}
-.introjs-bullets ul li a {
-  transition: width 0.1s ease-in;
-  box-sizing: content-box;
-  display: block;
-  width: 6px;
-  height: 6px;
-  background: #ccc;
-  border-radius: 10px;
-  text-decoration: none;
-  cursor: pointer;
-}
-.introjs-bullets ul li a:focus,
-.introjs-bullets ul li a:hover {
-  width: 15px;
-  background: #999;
-  text-decoration: none;
-  outline: 0;
-}
-.introjs-bullets ul li a.active {
-  width: 15px;
-  background: #999;
-}
-.introjs-progress {
-  box-sizing: content-box;
-  overflow: hidden;
-  height: 10px;
-  margin: 10px;
-  border-radius: 4px;
-  background-color: #e0e0e0;
-}
-.introjs-progressbar {
-  box-sizing: content-box;
-  float: left;
-  width: 0%;
-  height: 100%;
-  font-size: 10px;
-  line-height: 10px;
-  text-align: center;
-  background-color: #08c;
-}
-.introjsFloatingElement {
-  position: absolute;
-  height: 0;
-  width: 0;
-  left: 50%;
-  top: 50%;
-}
-.introjs-fixedTooltip {
-  position: fixed;
-}
-.introjs-hint {
-  box-sizing: content-box;
-  position: absolute;
-  background: 0 0;
-  width: 20px;
-  height: 15px;
-  cursor: pointer;
-}
-.introjs-hint:focus {
-  border: 0;
-  outline: 0;
-}
-.introjs-hint:hover > .introjs-hint-pulse {
-  background-color: rgba(60, 60, 60, 0.57);
-}
-.introjs-hidehint {
-  display: none;
-}
-.introjs-fixedhint {
-  position: fixed;
-}
-@keyframes introjspulse {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-  }
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px transparent;
-  }
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 transparent;
-  }
-}
-.introjs-hint-pulse {
-  box-sizing: content-box;
-  width: 15px;
-  height: 15px;
-  border-radius: 30px;
-  background-color: rgba(136, 136, 136, 0.24);
-  z-index: 10;
-  position: absolute;
-  transition: all 0.2s ease-out;
-  animation: introjspulse 2s infinite;
-}
-.introjs-hint-no-anim .introjs-hint-pulse {
-  animation: none;
-}
-.introjs-hint-dot {
-  box-sizing: content-box;
-  background: 0 0;
-  border-radius: 60px;
-  height: 50px;
-  width: 50px;
-  position: absolute;
-  top: -18px;
-  left: -18px;
-  z-index: 1;
-  opacity: 0;
-}
-/*# sourceMappingURL=introjs.css.map */
-
-.introjs-tooltip {
-  background-color: rgba(39, 62, 130, 0.8);
-  color: #fff;
-}
-
-.introjs-button,
-.introjs-button:hover,
-.introjs-button:focus,
-.introjs-button:active,
-.introjs-disabled,
-.introjs-disabled:focus,
-.introjs-disabled:hover {
-  outline: none;
-  background-image: none;
-  background-color: transparent;
-  color: #fff;
-  border: 1px solid transparent;
-  border-radius: 50px;
-  box-shadow: none;
-  border-shadow: none;
-  text-shadow: none;
-}
-
-.introjs-button:hover,
-.introjs-button:focus,
-.introjs-button:active {
-  border: 1px solid #fff;
-}
-.introjs-disabled,
-.introjs-disabled:focus,
-.introjs-disabled:hover {
-  color: #ccc;
-  border: 1px solid transparent;
-}
-
-.introjs-arrow {
-  border: 10px solid #fff;
-}
-.introjs-arrow.top,
-.introjs-arrow.top-middle,
-.introjs-arrow.top-right {
-  border-color: transparent transparent rgba(39, 62, 130, 0.8);
-  top: -20px;
-  left: 20px;
-}
-.introjs-arrow.bottom,
-.introjs-arrow.bottom-middle,
-.introjs-arrow.bottom-right {
-  border-color: rgba(39, 62, 130, 0.8) transparent transparent;
-  bottom: -20px;
-  left: 20px;
-}
-.introjs-arrow.left,
-.introjs-arrow.right {
-  top: 20px;
-}
-.introjs-arrow.left-bottom,
-.introjs-arrow.right-bottom {
-  bottom: 20px;
-}
-
-.introjs-arrow.left,
-.introjs-arrow.left-bottom {
-  left: -20px;
-  border-color: transparent rgba(39, 62, 130, 0.8) transparent transparent;
-}
-.introjs-arrow.right,
-.introjs-arrow.right-bottom {
-  right: -20px;
-  border-color: transparent transparent transparent rgba(39, 62, 130, 0.8);
-}
 .pa__option {
   ul {
     @apply grid grid-cols-1 md:grid-cols-3 gap-2;
@@ -2447,4 +2005,184 @@ tr.introjs-showElement > th {
       }
     }
   }
+}
+
+#por__tabs.as__doc_tabs {
+  @apply hidden divide-x divide-gray-200 lg:flex items-stretch border-b border-b-gray-200;
+  li {
+    @apply text-azul-dark flex-1;
+    a {
+      @apply text-azul-dark flex flex-row w-full px-2 pt-2 pb-3 focus:ring-4 focus:ring-blue-300 focus:outline-none h-full transition-colors duration-500 ease-in-out gap-3 items-center;
+      * {
+        @apply select-none pointer-events-none;
+      }
+      b {
+        @apply mt-0;
+      }
+      i {
+        @apply flex-none transition-colors h-8 w-8 rounded-full text-white bg-azul-bright2 flex justify-center items-center mb-0 duration-500 ease-in-out;
+      }
+
+      &:hover {
+        @apply bg-[#E9F5F8];
+      }
+    }
+  }
+}
+.guided-tour-step {
+  .guided-tour-step-title {
+    @apply !font-je !text-azul-bold !text-2xl;
+  }
+  .guided-tour-step-content {
+    @apply !text-azul-dark !text-lg !leading-tight;
+  }
+}
+
+[data-tg-tour] {
+  scroll-margin: 30px 0;
+}
+
+.tg-backdrop {
+  @apply absolute items-center justify-center hidden z-[99] rounded-lg shadow-2xl border border-azul-bright2 top-1/2 left-1/2 w-0 h-0;
+  &.tg-backdrop-animate {
+    @apply transition-all duration-300;
+  }
+}
+.tg-dialog {
+  @apply absolute rounded-lg  min-h-32  text-azul-dark max-w-md  hidden top-0 left-0 shadow-2xl p-0 text-lg bg-gradient-to-b from-[#E9F3FA] via-white via-30%  to-white border border-alpha-19 delay-100;
+
+  .tg-dialog-header {
+    @apply flex items-start px-4 py-2;
+
+    .tg-dialog-title {
+      @apply font-je text-xl text-azul-bold mr-auto;
+      & + .tg-dialog-body {
+        @apply px-4 py-2;
+      }
+    }
+    .tg-dialog-close-btn {
+      @apply w-7 h-7 ml-1 cursor-pointer whitespace-nowrap;
+      &:hover {
+        opacity: 8;
+      }
+      &:focus {
+        opacity: 1;
+      }
+      svg {
+        @apply fill-azul-50 w-full h-full;
+      }
+    }
+    .tg-dialog-spinner {
+      -webkit-animation: tg-spin 1s linear infinite;
+      -moz-animation: tg-spin 1s linear infinite;
+      -o-animation: tg-spin 1s linear infinite;
+      animation: tg-spin 1s linear infinite;
+      @apply hidden opacity-40 -mt-[1px];
+      @keyframes tg-spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(359deg);
+        }
+      }
+    }
+  }
+  .tg-dialog-progress-bar {
+    @apply mx-4 bg-slate-100 h-1.5 block relative rounded-lg;
+    > .tg-bar {
+      background: repeating-linear-gradient(
+        -55deg,
+        #3bc3ed,
+        #3bc3ed 5px,
+        #afecff 5px,
+        #afecff 10px
+      );
+      @apply rounded-lg absolute top-0 left-0 min-w-1 h-full block transition-all duration-700;
+    }
+  }
+  .tg-dialog-body {
+    @apply px-4 py-2 font-normal;
+  }
+  .tg-dialog-dots {
+    @apply flex items-center justify-center mb-2.5 px-0 py-4 border-none;
+    > span.tg-dot {
+      @apply inline-block w-2.5 h-2.5 mx-1 my-0 rounded-xl bg-azul-20;
+      &.tg-dot-active {
+        @apply bg-azul-bright2;
+      }
+    }
+  }
+  .tg-dialog-footer {
+    @apply flex items-center px-4 py-2;
+    button.tg-dialog-btn {
+      @apply btn btn-sm bg-alpha-30 text-azul-dark border-none;
+      & + button {
+        @apply ml-auto;
+      }
+
+      &.disabled {
+        @apply pointer-events-none opacity-60;
+      }
+
+      &:hover {
+        @apply bg-azul-bold text-white outline-none shadow-none;
+      }
+
+      &:focus {
+        @apply outline-none shadow-none;
+      }
+
+      &:active {
+        @apply text-azul-bold bg-azul-20 border-azul-50 border outline-none shadow-none;
+      }
+    }
+    .tg-dialog-footer-sup {
+      @apply text-center leading-none mx-auto my-0 px-2.5 py-0;
+      .tg-step-progress {
+        @apply text-sm font-bold opacity-40 tracking-wide inline-block mx-auto my-0;
+      }
+      .tg-dialog-dots {
+        @apply text-sm m-0 p-0 border-none;
+        > span.tg-dot {
+          @apply w-2 h-2 mx-1 my-0;
+        }
+        & + .tg-step-progress {
+          @apply mt-2.5 text-xs;
+        }
+      }
+    }
+  }
+  .tg-arrow {
+    @apply text-[0.78rem] absolute w-2 h-2 rotate-45 rounded-sm bg-white;
+  }
+  &.tg-dialog-fixed {
+    @apply transition-none delay-0;
+  }
+  &.animate-position {
+    @apply transition-all duration-300;
+  }
+
+  &.tg-dialog-loading {
+    .tg-dialog-header {
+      .tg-dialog-title {
+        @apply opacity-40;
+      }
+      .tg-dialog-close-btn {
+        @apply hidden;
+      }
+      .tg-dialog-spinner {
+        @apply inline-block;
+      }
+    }
+    .tg-dialog-body {
+      @apply pointer-events-none opacity-40;
+    }
+    .tg-dialog-footer {
+      @apply pointer-events-none opacity-40;
+    }
+  }
+}
+
+#modal_intro {
 }
