--- a/src/partials/PORTAL/faqs/faq_1_2.html
+++ b/src/partials/PORTAL/faqs/faq_1_2.html
@@ -18,5 +18,145 @@
         </div>
       </div>
     </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          ¿Si soy cónyuge o compañero (a) permanente menor de 30 años, ¿sería
+          beneficiario vitalicio de una pensión de sobrevivencia?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            La pensión de sobrevivencia hace referencia a la prestación
+            económica que tiene derecho el grupo familiar del pensionado. Según
+            el Artículo 13 de la Ley 797 de 2003 en modificación del Artículo 74
+            de la Ley 100 de 1993, establece que el pago de la mesada se hará de
+            manera temporal si el beneficiario con condición de cónyuge o
+            compañero (a) permanente es menor de 30 años y no tiene hijos en
+            común con el fallecido, cumpliendo esta condición, el pago de la
+            mesada se hará solo por 20 años. Por su parte, si el cónyuge o
+            compañero (a) permanente es menor de 30 años y tiene hijos en común
+            con el fallecido, el pago de la mesada se hará de manera vitalicia.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          ¿En caso de que mi familiar pensionado por invalidez fallezca, ¿qué
+          documentos debo aportar para mi pensión?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            Conoce la documentación requerida para la sustitución pensional
+            según sea tu caso, ingresando aquí . Adicional, recuerda diligenciar
+            la solicitud de sustitución pensional descarga aquí .
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          ¿Debo presentar certificado de supervivencia por ser pensionado?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            Según el Artículo 36 del Decreto Ley 2106 de 2019, los pensionados
+            por invalidez y sobrevivencia que residen en el exterior deberán
+            probar su supervivencia ante las entidades que forman parte del
+            Sistema General de Seguridad Social Integral cada seis (6) meses.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Después de estar pensionado, ¿seré calificado nuevamente?</h4>
+        <div class="fqs_info">
+          <p>
+            Según las condiciones actuales de tu calificación de invalidez, cada
+            3 años podrás ser recalificado según lo establecido en el Artículo
+            44 de la Ley 100 de 1993 o demás leyes o normas que lo sustituyan o
+            complementen.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Qué es una sustitución pensional?</h4>
+        <div class="fqs_info">
+          <p>
+            La sustitución pensional es una prestación que se otorga a los
+            beneficiarios de un pensionado por invalidez, que ha fallecido. Esta
+            prestación permite sustituir el derecho a la pensión. Para acceder a
+            la sustitución pensional, se valida la condición de los
+            beneficiarios en el momento del fallecimiento.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          ¿Si soy pensionado por invalidez y llegara a fallecer, ¿qué pasaría
+          con los beneficiarios de mi pensión?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            En el caso de las pensiones por sobrevivencia se redistribuirán en
+            función del parentesco que acredite el beneficiario, de acuerdo con
+            el artículo 47 de la Ley 100 de 1993 y demás normas que le
+            sustituyan o complementen.
+          </p>
+          <p>
+            Los beneficiarios entrarían en un proceso de evaluación de
+            sustitución pensional, si tienen derecho y según sea su caso,
+            seguirán recibiendo la mesada pensional. Lo anterior aplicaría para
+            los beneficiarios hijos entre los 18 a 25 años, que acrediten la
+            calidad de estudiantes y si los hijos se encuentran en condición de
+            invalidez tendrán derecho de manera vitalicia. Esta mesada se
+            incrementará cada año según el IPC o el salario mínimo.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          ¿En caso de que mi familiar pensionado por invalidez fallezca, ¿qué
+          documentos debo aportar para mi pensión?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            Conoce la documentación requerida para la sustitución pensional
+            según sea tu caso, ingresando aquí . Adicional, recuerda diligenciar
+            la solicitud de sustitución pensional descarga
+            <a href="#">aquí</a> .
+          </p>
+          <ul>
+            <li>Certificado de estudio</li>
+            <li>Certificado de cuenta bancaria</li>
+            <li>Documento de identidad actualizado</li>
+            <li>Certificado de la EPS donde te encuentras afiliado</li>
+          </ul>
+          <p>Para hacer la entrega de esta documentación, puedes:</p>
+          <ul>
+            <li>
+              Ingresar a nuestra página web, sección “Solicitudes”, allí
+              radicarás la solicitud y la respuesta te llegará al correo que
+              tienes registrado en nuestra compañía.
+            </li>
+            <li>
+              Comunicarte a nuestras líneas de atención a nivel nacional 018000
+              412 854 y en Medellín al (604) 4026876, donde se validará la
+              identidad del solicitante y se procederá con la recepción de la
+              documentación indicada para el ingreso de la solicitud.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </li>
   </ol>
 </li>
