chore: Update FAQ tabs icons in portal

--- a/src/partials/PORTAL/faqs/tabs_2.html
+++ b/src/partials/PORTAL/faqs/tabs_2.html
@@ -30,7 +30,7 @@
             locals='{ 
               "link": "#documentos",
               "tab": "1",
-              "icon":"unlock-keyhole",
+              "icon":"stars",
               "title":"Servicios Portal Transaccional",
               "hash": "servicios",
               "anchor":"documentos"
@@ -52,7 +52,7 @@
             locals='{ 
               "link": "#documentos",
               "tab": "3",
-              "icon":"question",
+              "icon":"handshake-angle",
               "title":"Beneficiarios",
               "hash": "beneficiarios",
               "anchor":"documentos"
@@ -63,7 +63,7 @@
             locals='{ 
             "link": "#documentos",
             "tab": "4",
-            "icon":"question",
+            "icon":"circle-exclamation",
             "title":"Novedades",
             "hash": "novedades",
             "anchor":"documentos"
@@ -74,7 +74,7 @@
             locals='{ 
             "link": "#documentos",
             "tab": "5",
-            "icon":"question",
+            "icon":"phone",
             "title":"Canales de atención",
             "hash": "canaless",
             "anchor":"documentos"
