--- a/src/partials/PORTAL/faqs/tabs_3.html
+++ b/src/partials/PORTAL/faqs/tabs_3.html
@@ -15,7 +15,7 @@
             locals='{ 
               "link": "#documentos",
               "tab": "0",
-              "icon":"lock",
+              "icon":"file-exclamation",
               "title":"Certificados y otros documentos",
               "hash": "certificados",
               "anchor":"documentos"
@@ -26,7 +26,7 @@
             locals='{ 
               "link": "#documentos",
               "tab": "1",
-              "icon":"unlock-keyhole",
+              "icon":"circle-exclamation",
               "title":"Novedades",
               "hash": "novedades",
               "anchor":"documentos"
