chore: Update FAQ tab title in tabs_3.html

--- a/src/partials/PORTAL/faqs/tabs_3.html
+++ b/src/partials/PORTAL/faqs/tabs_3.html
@@ -27,7 +27,7 @@
               "link": "#documentos",
               "tab": "1",
               "icon":"circle-exclamation",
-              "title":"Novedades",
+              "title":"Novedades de Nómina",
               "hash": "novedades",
               "anchor":"documentos"
           }'
