cambios GC agosto

--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -293,15 +293,15 @@
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/sebastian.webp"
+            src="/assets/images/altag/maria_alzate.webp"
             alt="Sebastián Mejía"
             class="crp"
           />
         </div>
 
         <div class="modal_info_int">
-          <h4>Sebastián Mejía</h4>
-          <h6>Líder de Legal</h6>
+          <h4>Maritza Alzate</h4>
+          <h6>Líder Jurídico</h6>
           <blockquote>
             <p>
               “Más allá de buscar la seguridad jurídica en ASULADO, brindamos confianza, protegemos los intereses de la Organización y sus públicos de interés, siempre asegurando el cumplimiento del marco legal y el código de buen Gobierno Corporativo.
@@ -310,7 +310,7 @@
             </p>
           </blockquote>
           <a
-            href="https://www.linkedin.com/in/sebastian-mejia-aramburo/"
+            href="https://www.linkedin.com/in/maritza-alzate-164ba86b/"
             target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
@@ -410,15 +410,15 @@
     
     <li>
       <img
-        src="/assets/images/altag/sebastian.webp"
+        src="/assets/images/altag/maria_alzate.webp"
         alt="Sebastián Mejía"
       />
       <button onclick="mod_9.showModal()">
         <i class="q fa-solid fa-quotes"></i>
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
-      <h4>Sebastián Mejía</h4>
-      <p> Líder de Legal</p>
+      <h4>Maritza Alzate</h4>
+      <p> Líder Jurídico</p>
     </li>
     <li>
       <img src="/assets/images/altag/diana.webp" alt="Diana Ramírez" />
