--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -200,7 +200,7 @@
           ></a>
         </div>
         <div class="as__nav_item">
-          <a class="as__nav_item_link" title="INICIO" href="certificados.html"
+          <a class="as__nav_item_link" title="INICIO" href="/PORTAL/?ayuda=1"
             ><i class="fa-regular fa-circle-question"></i
           ></a>
         </div>
