chore: Update FAQ page with new table layout for pension discounts

--- a/src/partials/PORTAL/faqs/faq_1_4.html
+++ b/src/partials/PORTAL/faqs/faq_1_4.html
@@ -13,7 +13,39 @@
             dispuesto en la Ley 100 de 1993. Este descuento se hace de la
             siguiente manera:
           </p>
-          <p>(Dejar mismo recuadro que ya está)</p>
+          <table class="table-auto">
+            <thead>
+              <tr>
+                <th>
+                  Mesada pensional en Salarios Mínimos Legales Mensuales
+                  Vigentes (SMLMV)
+                </th>
+                <th>Cotización mensual en salud</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1 SMLMV</td>
+                <td>4%</td>
+              </tr>
+              <tr>
+                <td>&gt;1 SMLMV y hasta 2 SMLMV</td>
+                <td>10%</td>
+              </tr>
+              <tr>
+                <td>&gt;2 SMLMV y hasta 5 SMLMV</td>
+                <td>12%</td>
+              </tr>
+              <tr>
+                <td>&gt;5 SMLMV y hasta 8 SMLMV</td>
+                <td>12%</td>
+              </tr>
+              <tr>
+                <td>&gt;8 SMLMV</td>
+                <td>12%</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </li>
