Update FAQ links in faq_2_2.html, index.html, and faq_1_2.html

--- a/src/partials/PORTAL/faqs/faq_1_2.html
+++ b/src/partials/PORTAL/faqs/faq_1_2.html
@@ -49,8 +49,9 @@
         <div class="fqs_info">
           <p>
             Conoce la documentación requerida para la sustitución pensional
-            según sea tu caso, ingresando aquí . Adicional, recuerda diligenciar
-            la solicitud de sustitución pensional descarga aquí .
+            según sea tu caso, ingresando <a href="#">aquí.</a> Adicional,
+            recuerda diligenciar la solicitud de sustitución pensional descarga
+            <a href="#">aquí.</a>.
           </p>
         </div>
       </div>
@@ -131,8 +132,8 @@
         <div class="fqs_info">
           <p>
             Conoce la documentación requerida para la sustitución pensional
-            según sea tu caso, ingresando aquí . Adicional, recuerda diligenciar
-            la solicitud de sustitución pensional descarga
+            según sea tu caso, ingresando <a href="#">aquí.</a>. Adicional,
+            recuerda diligenciar la solicitud de sustitución pensional descarga
             <a href="#">aquí</a> .
           </p>
           <ul>
