--- a/src/partials/PORTAL/faqs/faq_2_2.html
+++ b/src/partials/PORTAL/faqs/faq_2_2.html
@@ -66,8 +66,9 @@
           <p>
             Dirígete a la sección “Gestión de documentos” (BOTÓN) en la parte
             superior de la página. Para ir directamente a la sección de
-            Certificados en el Portal Transaccional, haz clic aquí (Botón que
-            dirige a “certificados” en el Portal Transaccional).
+            Certificados en el Portal Transaccional, haz clic
+            <a href="#">aquí.</a> (Botón que dirige a “certificados” en el
+            Portal Transaccional).
           </p>
         </div>
       </div>
